fix: ask button should be align middle
Also make all components in interactive area to 40px height

--- a/src/web/src/Pages/NewChatPage/Components/ChatUi/ChatInput/ChatInputText.module.scss
+++ b/src/web/src/Pages/NewChatPage/Components/ChatUi/ChatInput/ChatInputText.module.scss
@@ -39,7 +39,9 @@
     .inputField {
       display: block;
       font-size: var(--font-size-3);
-      padding: 8px 36px 8px 16px;
+      padding: 0px 36px 0px 16px;
+      height: 40px;
+      line-height: 40px;
       color: var(--font-color-main);
       border-radius: 20px;
 
